--- a/proffesional template/home.html
+++ b/proffesional template/home.html
@@ -12,7 +12,7 @@
 			padding:0;
 		}
 		h1{
-			color:grey;
+			color:#575757;
 			font:25px Arial, sans-serif;
 		}
 		#columns
@@ -29,7 +29,8 @@
 		
 		p{
 			font:12px Arial, sans-serif;
-			color:grey;
+			color:#4f4f4f;
+			margin:0;
 		}
 		#wrapper{
 			background-color: #fff;
@@ -50,10 +51,18 @@
 			background-position: 0 17px;
 			padding:12px 7px;}
 		.col li:first-child {
-			border-bottom: 1px dotted grey;
+			border-bottom: 1px dotted #a4a4a4;
 		}
 		.col li:last-child {
-			border-top: 1px dotted grey;
+			border-top: 1px dotted #a4a4a4;
+		}
+		#columns .col button{
+			/*margin-top: 20px;*/
+			color:#868686;
+		}
+		#columns .col p {
+			padding: 25px 0 20px 0;
+
 		}
 		header img{
 			position:relative;
@@ -73,6 +82,7 @@
 		#wrapper li a {
 			font:12px Arial, sans-serif;
 			text-decoration: none;
+			color:#808080;
 		}
 		
 		header ul li:last-child  {
@@ -81,7 +91,7 @@
 			background-position: center;
 		}
 
-		#page{
+		#wrapper header #page{
 			color:#fff;
 		}
 		#wrapper ul{
@@ -92,12 +102,13 @@
 			background:  url(images/tel.jpg) no-repeat;
 			margin:0;
 			font: bold 18px Arial, sans-serif;
-			text-align:right;
+			text-align:center;
 			/*padding: 9px 28px 13px 86px;*/
 			float:right;
-			display:block;
+			display:inline;
 			height:34px;
 			width:223px;
+			color:#c7c7c7;
 		}
 		#body{
 			background-image: url(bodyBG.jpg);
@@ -176,6 +187,7 @@
 		}
 		#column2{
 			width: 300px;
+			padding-bottom: 10px;
 		}
 		#column3{
 			width: 280px;
@@ -188,10 +200,11 @@
 			/*clear:both;*/
 		}
 		#wrapper footer ul li a{
-			color:grey;
+			color:#4f4f4f;
 		}
-		#column1 ul li{
+		#column1 ul{
 			list-style-type:none;
+			padding: 0;
 		}
 		footer h2 {
 			padding:30px 0;
@@ -199,10 +212,36 @@
 		#column2 p span{
 			font-weight: bold;
 			color:#000;
+
 		}
 		#column3 p span{
 			font-weight: bold;
 			color:#4a78c5;
+		}
+		#column3 p {
+			line-height: 100%;
+		}
+		#copyright {
+			border-top: 2px solid #fff;
+			clear:both;
+
+		}
+		#copyright p {
+			/*display:inline;*/
+			padding:25px 40px 5px 40px;
+			
+			margin:0;
+		}
+		#copyright img{
+			float:right;
+			position:relative;
+			right:40px;
+			bottom:25px;
+			padding-left:62px;
+		}
+		#social img{
+			padding-right: 16px;
+			padding-left: 0;
 		}
 	</style>
 </head>
@@ -316,10 +355,21 @@
 		<div id="column3">
 			<h2>From Our Blog</h2>
 			<p>July 6, 2010</p>
-			<p><span>Lorem ipsum dolor sit amet, consectetur </span> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui. </p>
+			<p><span>Lorem ipsum dolor sit amet, consectetur </span> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui... </p>
+			<p>&nbsp</p>
 			<p>July 6, 2010</p>
-			<p><span>Lorem ipsum dolor sit amet, consectetur </span> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui. </p>
+			<p><span>Lorem ipsum dolor sit amet, consectetur </span> adipiscing elit. Maecenas placerat vehicula magna, quis hendrerit risus commodo eu. Vivamus ultricies porttitor dui... </p>
 		</div>
+		<div id="copyright">
+			<p>Copyright © 2010 Business. All rights reserved. Designed by GraphicFuel.com</p>
+			<img src="images/logo-down.jpg" alt="logo" />
+			<div id="social">
+				<img src="images/facebook.jpg" alt="facebook">
+				<img src="images/in.jpg" alt="in">
+				<img src="images/tweeter.jpg" alt="tweeter">
+			</div>
+		</div>
+		
 		</footer>	
 	</div>
 
